Use bounded joint velocity selection for tank limiting